--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-touch-icon.png" />
     <script src="/js/app.js"></script>
-    <title>PWA Camera</title>
+    <title>My PWA Camera</title>
   </head>
   <body>
     <input type="file" accept="image/*" capture="camera" id="camera" class="inputget">
